--- a/.github/workflows/build-openwrt-lean.yml
+++ b/.github/workflows/build-openwrt-lean.yml
@@ -11,6 +11,12 @@ name: Build OpenWrt PSG1218A
 
 on:
   repository_dispatch:
+  workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: 'false'
 #  release:
 #    types: published
 #  push:
@@ -18,8 +24,8 @@ on:
 #      - master
 #    paths:
 #      - '.config'
-  schedule:
-    - cron: 0 15 */15 * *
+#  schedule:
+#    - cron: 0 15 */15 * *
 #          分 时 日 月 周5
 #   - cron: 0 8 */3 * *
 #  watch:
