--- a/.config
+++ b/.config
@@ -12,23 +12,23 @@ CONFIG_TARGET_IMAGES_GZIP=y
 #CONFIG_PACKAGE_ipv6helper=y
 
 # 常用LuCI插件选择:
-CONFIG_LIBCURL_NO_SMB="!"
+# CONFIG_LIBCURL_NO_SMB="!"
 # CONFIG_PACKAGE_luci-app-samba is not set
 # CONFIG_PACKAGE_autosamba is not set
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-adguardhome is not set
 # CONFIG_PACKAGE_luci-app-ddns=y
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-CONFIG_PACKAGE_luci-app-arpbind=y
+# CONFIG_PACKAGE_luci-app-arpbind=y
 # CONFIG_PACKAGE_luci-app-autoreboot is not set
 # CONFIG_PACKAGE_luci-app-cifsd is not set
-CONFIG_PACKAGE_luci-app-mtwifi=y
+# CONFIG_PACKAGE_luci-app-mtwifi=y
 # CONFIG_PACKAGE_luci-app-upnp=y
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-app-vlmcsd is not set
 # CONFIG_PACKAGE_luci-app-firewall is not set
-CONFIG_PACKAGE_luci-app-hd-idle=y
-CONFIG_PACKAGE_luci-app-ramfree=y
+# CONFIG_PACKAGE_luci-app-hd-idle=y
+# CONFIG_PACKAGE_luci-app-ramfree=y
 # CONFIG_DEFAULT_luci-app-flowoffload is not set
 # CONFIG_PACKAGE_luci-app-cpufreq is not set
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
@@ -50,7 +50,7 @@ CONFIG_PACKAGE_luci-app-ramfree=y
 # LuCI主题:
 # CONFIG_PACKAGE_luci-theme-opentomcat is not set
 # CONFIG_PACKAGE_luci-theme-netgear=y
-CONFIG_PACKAGE_luci-theme-argon=y
+# CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_DEFAULT_luci-theme-bootstrap-mod is not set
 # CONFIG_DEFAULT_luci-theme-darkmatter is not set
 # CONFIG_PACKAGE_luci-theme-material is not set
