--- a/.config
+++ b/.config
@@ -6,6 +6,8 @@ CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
 # 固件压缩:
 CONFIG_TARGET_IMAGES_GZIP=y
 
+CONFIG_PACKAGE_luci-app-ssr-plus=y
+
 # IPv6支持:
 #CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 #CONFIG_PACKAGE_ip6tables=y
