--- a/.config
+++ b/.config
@@ -6,7 +6,15 @@ CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
 # 固件压缩:
 CONFIG_TARGET_IMAGES_GZIP=y
 
+CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_libustream-openssl=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+CONFIG_PACKAGE_xray-core=y
+
 
 # IPv6支持:
 #CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
