--- a/.github/workflows/build-openwrt-lean.yml
+++ b/.github/workflows/build-openwrt-lean.yml
@@ -72,7 +72,7 @@ jobs:
       run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
 
     - name: 更新安装提要
-      run: cd openwrt && ./scripts/feeds update -a && ./scripts/feeds install -a && ./scripts/feeds install -a
+      run: cd openwrt && ./scripts/feeds update -a && ./scripts/feeds install -a 
 
     - name: 加载自定义配置
       run: |
