--- a/.github/workflows/build-openwrt-lean.yml
+++ b/.github/workflows/build-openwrt-lean.yml
@@ -69,7 +69,7 @@ jobs:
         sudo chown $USER:$GROUPS /workdir
 
     - name: 克隆源代码
-      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+      run: git config --global http.sslverify false && git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
 
     - name: 更新安装提要
       run: cd openwrt && ./scripts/feeds update -a && ./scripts/feeds install -a 
