--- a/.config
+++ b/.config
@@ -1,7 +1,18 @@
 # 编译psg1218a固件:
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7620=y
-CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
+# CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
+CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_k2-v22.4=y
+CONFIG_HAS_SUBTARGETS=y
+CONFIG_HAS_DEVICES=y
+CONFIG_TARGET_BOARD="ramips"
+CONFIG_TARGET_SUBTARGET="mt7620"
+CONFIG_TARGET_PROFILE="DEVICE_phicomm_k2-v22.4"
+CONFIG_TARGET_ARCH_PACKAGES="mipsel_24kc"
+CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mno-branch-likely -mips32r2 -mtune=24kc"
+CONFIG_CPU_TYPE="24kc"
+CONFIG_LINUX_5_4=y
+
 
 # 固件压缩:
 CONFIG_TARGET_IMAGES_GZIP=y
