--- a/.config
+++ b/.config
@@ -1,8 +1,8 @@
 # 编译psg1218a固件:
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7620=y
-# CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
-CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_k2-v22.4=y
+CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
+# CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_k2-v22.4=y
 CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="ramips"
