--- a/.config
+++ b/.config
@@ -1,8 +1,8 @@
 # 编译psg1218a固件:
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7620=y
-CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
-# CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_k2-v22.4=y
+# CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_psg1218a=y
+CONFIG_TARGET_ramips_mt7620_DEVICE_phicomm_k2-v22.4=y
 CONFIG_HAS_SUBTARGETS=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="ramips"
@@ -26,6 +26,8 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 
 CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
 CONFIG_PACKAGE_uhttpd=y
+
+CONFIG_PACKAGE_luci-app-upnp=y
 
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy is not set
