--- a/.github/workflows/build-openwrt-lean.yml
+++ b/.github/workflows/build-openwrt-lean.yml
@@ -33,8 +33,8 @@ on:
 
 env:
   #REPO_URL: https://github.com/coolsnowwolf/lede
-  #REPO_URL: https://github.com/gcp0923/openwrt
-  REPO_URL: https://github.com/gcp0923/lede
+  REPO_URL: https://github.com/gcp0923/openwrt
+  #REPO_URL: https://github.com/gcp0923/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
