--- a/.config
+++ b/.config
@@ -23,8 +23,9 @@ CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_Obfs=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
-CONFIG_PACKAGE_shadowsocks-libev=y
-CONFIG_PACKAGE_simple-obfs=y
+
+#CONFIG_PACKAGE_shadowsocks-libev=y
+#CONFIG_PACKAGE_simple-obfs=y
 
 # CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
 # CONFIG_PACKAGE_uhttpd=y
